--- a/EmpApp/EmpApp/Base.lproj/Main.storyboard
+++ b/EmpApp/EmpApp/Base.lproj/Main.storyboard
@@ -17,6 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nie-yc-Yo3">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Pf-8x-RMr">
+                                        <rect key="frame" x="20" y="287" width="374" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="E4a-1Z-j0a"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                <constraints>
+                                    <constraint firstItem="8Pf-8x-RMr" firstAttribute="leading" secondItem="Nie-yc-Yo3" secondAttribute="leading" constant="20" id="RyD-iR-E6o"/>
+                                    <constraint firstItem="8Pf-8x-RMr" firstAttribute="centerY" secondItem="Nie-yc-Yo3" secondAttribute="centerY" id="dAm-LO-Phl"/>
+                                    <constraint firstItem="8Pf-8x-RMr" firstAttribute="centerX" secondItem="Nie-yc-Yo3" secondAttribute="centerX" id="yuN-U6-bLT"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="JXy-lM-leG">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -110,13 +130,19 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JXy-lM-leG" secondAttribute="trailing" id="1jX-it-gbk"/>
+                            <constraint firstItem="Nie-yc-Yo3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="45e-Cn-wZU"/>
                             <constraint firstItem="JXy-lM-leG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Bh3-Fm-kEW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Nie-yc-Yo3" secondAttribute="trailing" id="DzP-hD-sMg"/>
+                            <constraint firstItem="Nie-yc-Yo3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IGh-6i-Uad"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JXy-lM-leG" secondAttribute="bottom" id="Kba-on-i7p"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Nie-yc-Yo3" secondAttribute="bottom" id="RDy-CL-HL2"/>
                             <constraint firstItem="JXy-lM-leG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jDa-00-Jm4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LfV-6Q-juD"/>
                     <connections>
+                        <outlet property="errorLabel" destination="8Pf-8x-RMr" id="3nJ-q1-7SE"/>
+                        <outlet property="errorView" destination="Nie-yc-Yo3" id="cit-Z7-8Kp"/>
                         <outlet property="listTableView" destination="JXy-lM-leG" id="OoQ-Zc-zSz"/>
                     </connections>
                 </viewController>
@@ -153,6 +179,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tertiarySystemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
